cilium-cli/connectivity/builder/manifests/client-egress-to-echo-expression-port-range-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-egress-to-echo-expression-port-range-ccnp
spec:
  endpointSelector:
    matchExpressions:
    - { key: 'other', operator: Exists }
  egress:
  - toPorts:
    - ports:
      - port: "4196"
        endPort: 8191
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        kind: echo
